--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -26,12 +26,21 @@ jobs:
           BRANCH_NAME=${GITHUB_REF#refs/heads/}
           echo "BRANCH_NAME=$BRANCH_NAME" >> $GITHUB_ENV
           
+      - name: Make the commit message compatible with JSON
+        run: |
+          # Escape the commit message for JSON
+          COMMIT_MESSAGE=$(echo -n "${{ github.event.head_commit.message }}" | sed 's/%0A/\\n/g' | jq -s -Rr @json)
+          COMMIT_MESSAGE=${COMMIT_MESSAGE:1:-1}
+          echo "COMMIT_MESSAGE=$COMMIT_MESSAGE" >> $GITHUB_ENV
+          
       - name: Discord Message
         uses: satak/webrequest-action@master
         with:
           url: ${{ secrets.DISCORD_WEBHOOK }}
           method: POST
-          payload: '{ "embeds": [{ "title": "[${{ github.repository }}:${{ env.BRANCH_NAME }}] - new commit", "author": {"name": "${{ github.event.head_commit.author.name}}","url": "https://github.com/${{ github.event.head_commit.author.name}}","icon_url": "https://github.com/${{ github.event.head_commit.author.name}}.png"},"description": "```Commit Message:\n\n${{ github.event.head_commit.message }}```", "url": "https://github.com/${{ github.repository }}/commit/${{ github.sha }}", "color": 16763957 }] }'
+          payload: '{ "embeds": [{ "title": "[${{ github.repository }}:${{ env.BRANCH_NAME }}] - new commit", "author": {"name": "${{ github.event.head_commit.author.name}}","url": "https://github.com/${{ github.event.head_commit.author.name}}","icon_url": "https://github.com/${{ github.event.head_commit.author.name}}.png"},"description": "```Commit Message:\n\n${{ env.COMMIT_MESSAGE }}```", "url": "https://github.com/${{ github.repository }}/commit/${{ github.sha }}", "color": 16763957 }] }'
+
+
 
       - name: checkout repository
         uses: actions/checkout@v4
