--- a/gradle.properties
+++ b/gradle.properties
@@ -4,6 +4,7 @@ org.gradle.parallel=true
 
 # Fabric Properties
 # check these on https://fabricmc.net/develop
+minecraft_version_out=1.21.1
 minecraft_version=1.21
 yarn_mappings=1.21+build.9
 loader_version=0.16.5
@@ -15,3 +16,4 @@ archives_base_name=functioneditor
 
 # Dependencies
 fabric_version=0.102.0+1.21
+malilib_version = 0.21.0
